Fix video wraps even on a big screen - Add 400px flex basis to video containers

--- a/style.css
+++ b/style.css
@@ -54,4 +54,5 @@ button {
 
 .video-container > div {
 	flex-grow: 1;
+	flex-basis: 400px;
 }
